mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
  clusterIP: None
