wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-site
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
  type: NodePort
